@@ -129,10 +129,13 @@ static const TOK tokens[] =
 	{CONSTRAINT, "CONSTRAINT", 1, false},
 	{CONTAINING, "CONTAINING", 1, false},
 	{CONTINUE, "CONTINUE", 2, true},
+	{CORR, "CORR", 2, false},
 	{COS, "COS", 2, false},
 	{COSH, "COSH", 2, false},
 	{COT, "COT", 2, false},
 	{COUNT, "COUNT", 1, false},
+	{COVAR_POP, "COVAR_POP", 2, false},
+	{COVAR_SAMP, "COVAR_SAMP", 2, false},
 	{CREATE, "CREATE", 1, false},
 	{CROSS, "CROSS", 2, false},
 	{CSTRING, "CSTRING", 1, false},
